--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                     * Analyze market trends
                     * Implement **predictive models**
                     * Visualize risk factors
+
+                    ```python
+                    # Example of Markdown code block
+                    def goal_metric(x):
+                        return x * 1.5
+                    ```
                     
                     ---
                     
